# CIS441

./: README.md
Project1A/: CMakeCache.txt  CMakeLists.txt  Makefile  Project1A.tar  cmake_install.cmake  project1A  project1A.cxx
Project1B/: CMakeCache.txt  CMakeLists.txt~  Makefile  Project1B.tar  cmake_install.cmake  project1B  project1B.cxx
Project1C/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Project1C.tar  cmake_install.cmake  project1C  project1C.cxx  temp.cxx  triangle_ids
Project1D/: CMakeCache.txt  CMakeLists.txt  Makefile  Project1D.tar  cmake_install.cmake  project1D  project1D.cxx
Project1E/: CMakeCache.txt  CMakeLists.txt  Makefile  Project1E.tar  cmake_install.cmake  differencer  project1E  project1E.cxx
Project1F/: CMakeCache.txt  Makefile  Project1F.tar  cmake_install.cmake  project1F  project1F.cxx
Project2A/: CMakeCache.txt  CMakeLists.txt~  Makefile  Project2A.tar  cmake_install.cmake  project2A  project2A.cxx
Project2B/: CMakeCache.txt  CMakeLists.txt~  Makefile  Project2B.tar  cmake_install.cmake  project2B  project2B.cxx
diff/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
finalProject/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  finalProject  finalProject.cxx  finalProject.tar
